# git-ai

./: .cursorignore  .dockerignore  .env  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_QUALITY_GUIDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.test  Justfile  LICENSE  LLM_CLEANUP_PROMPT.md  MIGRATION.md  Makefile  Makefile.toml  PARALLEL_API_OPTIMIZATION.md  PERFORMANCE_IMPROVEMENTS.md  PERFORMANCE_OPTIMIZATIONS.md  README.md  REFACTORING_GUIDE.md  context.md  demo.cast  docker-compose.yml  examples.jsonl  file-tune.json  file-tune.json1  files.sh  fine-tune.md  finetune.md  kk  olof.prompt.yml  openapi-mock.yaml  openapi.json  openapi.yaml  rust-toolchain.toml  rustc-ice-2023-12-20T07_43_17-38768.txt  rustc-ice-2023-12-20T07_43_17-38769.txt  rustfmt.toml  (+7 more)
.cargo/: config.toml
.cursor/rules/: cleanup.mdc  rust.mdc  structure.mdc  sync-prs.mdc
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
.github/workflows/: approve-copilot-runs.yaml  assign-back-to-author.yml  assign-pr-to-author.yml  assign-to-reviewer.yml  build_artifacts.yml  bump.yml  cd.yml  ci.yml  copilot-setup-steps.yml  crate.yaml  create-draft.yml  create_draft.yml  deploy.yml  enforce-issue-link.yml  ollama.yml  pr-automation.yml  quality.yml  rust.yml  test-event.json  test.yml
.qlty/: qlty.toml
.trunk/: trunk.yaml
benches/: thread_lock_benchmark.rs
docs/: LOCAL_TESTING.md  copilot-workflow-improvements.md  debug-output-example.md  git-ai-process-overview.md  llm-input-generation-testing.md  process-diagram.md  workflow-comparison.md
examples/: function_calling_demo.rs  multi_step_commit.rs  parallel_commit_demo.rs  parallel_tool_calls_demo.rs  test_function_schema.rs
hook/: Cargo.toml
hooks/: prepare-commit-msg
resources/: demo.cast  prompt.md
scripts/: act-local.sh  comprehensive-tests  current-version  hook-stress-test  integration-tests  release  sync-all-prs  test-api-key-error.fish
src/: chat.rs  client.rs  commit.rs  config.rs  debug_output.rs  error.rs  examples.rs  filesystem.rs  finetune.rs  function_calling.rs  git.rs  hook.rs  install.rs  lib.rs  llm.rs  main.rs  model.rs  models.rs  multi_step_analysis.rs  multi_step_integration.rs  ollama.rs  openai.rs  profile.rs  profiling.rs  reinstall.rs  simple_multi_step.rs  style.rs  train.rs  uninstall.rs  wizard.rs
src/diff/: mod.rs  parser.rs  traits.rs
src/generation/: fallback.rs  mod.rs  multi_step.rs  types.rs
src/generation/multi_step/: analysis.rs  candidates.rs  local.rs  scoring.rs
src/hook/: mod.rs  traits.rs
tests/: api_key_error_test.rs  common.rs  fallback_strategy_test.rs  function_calling_test.rs  git.rs  hook_test.rs  llm_input_generation_test.rs  llm_test.rs  model_custom_test.rs  model_token_test.rs  model_validation_test.rs  multi_step_default_test.rs  ollama_test.rs  patch_test.rs  profiling_test.rs  prompt_invariants_test.rs
tools/: demo.sh  record.sh  test.sh
train/: Justfile  prompt.md  promptfooconfig.yaml  tests.csv
train/scripts/: train
