[package]
name = "git-ai"
version = "0.2.57"
edition = "2021"
description = "Git AI: Automates commit messages using ChatGPT. Stage your files, and Git AI generates the messages."
license = "MIT"
repository = "https://github.com/oleander/git-ai"

# https://github.com/oleander/git-ai/actions/runs/11872246630/artifacts/2196924470
[package.metadata.binstall]
targets = ["x86_64-unknown-linux-gnu", "x86_64-apple-darwin"]
pkg-binaries = ["git-ai", "git-ai-hook"]
name = "git-ai"

[lib]
name = "ai"
test = true

[[bin]]
name = "git-ai"
path = "src/main.rs"

[[bin]]
name = "git-ai-hook"
path = "src/bin/hook.rs"

[dependencies]
# Core functionality
anyhow = { version = "1.0.95", default-features = false }
thiserror = "2.0.11"
tokio = { version = "1.43", features = ["full"] }
futures = "0.3"
parking_lot = "0.12.3"
async-trait = "0.1"
tracing = "0.1"

# CLI and UI

colored = "3.0.0"
console = { version = "0.15.10", default-features = false }
indicatif = { version = "0.17.11", default-features = false }
log = "0.4.25"
env_logger = { version = "0.11.6", default-features = false }

# Git integration
git2 = { version = "0.20.0", default-features = false }

# Configuration
config = { version = "0.15.7", default-features = false, features = ["ini"] }
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0.217"
serde_ini = "0.2.0"
serde_json = "1.0"

async-openai = { version = "0.27.2", default-features = false }
ollama-rs = { version = "0.1", features = ["stream"] }
tiktoken-rs = "0.6.0"
reqwest = { version = "0.12.12", default-features = true }

# System utilities
openssl-sys = { version = "0.9.105", features = ["vendored"] }
rayon = "1.10.0"
num_cpus = "1.16.0"
rand = "0.9"
ctrlc = "3.4.5"
lazy_static = "1.5.0"
home = "0.5.11"
dirs = "6.0"

# Syntax highlighting and markdown rendering
syntect = { version = "5.2", default-features = false, features = [
  "default-fancy",
] }
pulldown-cmark = "0.12"
comrak = "0.35"
textwrap = "0.16"
structopt = "0.3.26"
mustache = "0.9.0"
maplit = "1.0.2"

[dev-dependencies]
tempfile = "3.16.0"

[profile.release]
codegen-units = 1
opt-level = 3
debug = true
lto = true

[profile.release.package."*"]
codegen-units = 1
opt-level = 3
