[package]
name = "hook"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "hook"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread"] }
clap = { version = "4.4.8", features = ["derive", "wrap_help"] }
reqwest = { version = "0.11.22", features = ["json"] }
serde = { version = "1", features = ["derive"] }
dotenv_codegen = "0.15.0"
serde_json = "1.0.108"
env_logger = "0.10.1"
lazy_static = "1.4.0"
ansi_term = "0.12.1"
thiserror = "1.0.50"
anyhow = "1.0.75"
dotenv = "0.15.0"
colored = "2.0.4"
git2 = "0.18.1"
log = "0.4.20"
rand = "0.8.5"
filepath = "0.1.2"